--- a/src/Header/NavMenuMiniDetailed/NavMenuMiniDetailed.module.scss
+++ b/src/Header/NavMenuMiniDetailed/NavMenuMiniDetailed.module.scss
@@ -1,126 +1,186 @@
 .headerBlockNavMini {
-  position: fixed !important;
-  background-color: #fff;
-  z-index: 4;
-  left: 0;
-  right: 0;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: .5rem 1rem 0;
+    position: fixed !important;
+    background-color: #fff;
+    z-index: 4;
+    left: 0;
+    right: 0;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5rem 1rem 0;
 
 
-  .headerContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    position: relative;
-
-    .navBarLogo {
-      color: rgba(0, 0, 0, .9);
-      text-decoration: none;
-      letter-spacing: 3px;
-      font-family: 'Josefin Sans', sans-serif;
-      margin-right: auto !important;
-      display: inline-block;
-      padding-top: .3125rem;
-      padding-bottom: .3125rem;
-      font-size: 1.25rem;
-      line-height: inherit;
-      white-space: nowrap;
-    }
-
-    .navMenu {
-
-      .navBarNav {
+    .headerContainer {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        margin-left: auto !important;
-        padding-left: 0;
-        margin-bottom: 0;
-        list-style: none;
+        position: relative;
 
-
-        .link {
-          font-size: 12px;
-          font-weight: 700;
-          letter-spacing: 2px;
-          position: relative;
-          display: inline-block;
-          color: rgba(0, 0, 0, .7) !important;
-          text-transform: uppercase;
-          opacity: 0.8;
-          text-decoration: none;
-          padding: .5rem 1rem;
-          padding-left: 0;
-          font-family: 'Open Sans', sans-serif;
-        }
-
-        .linkOnFocus {
-          opacity: 1;
-          color: #fd735a !important;
-          font-size: 12px;
-          font-weight: 700;
-          letter-spacing: 2px;
-          position: relative;
-          display: inline-block;
-          text-transform: uppercase;
-          text-decoration: none;
-          padding: .5rem 1rem;
-          padding-left: 0;
-          font-family: 'Open Sans', sans-serif;
-
-          &::after {
-            position: absolute;
-            content: "";
-            left: 0;
-            right: 0;
+        .navMenuMiniDtlRow {
             width: 100%;
-            height: 0;
-            background: #fbd0a1;
-            bottom: 20px;
-            z-index: -1;
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s ease-in-out 0s;
-          }
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 5px 0;
+            position: relative;
+
+            .navBarBtn {
+                outline: none;
+                padding: 0;
+                border: none;
+                font-size: 1.25rem;
+                line-height: 1;
+                background-color: transparent;
+                border-radius: .25rem;
+
+                .svgContainer {
+                    transform: rotate(45deg);
+                    cursor: pointer;
+                    -webkit-tap-highlight-color: transparent;
+                    transition: transform 400ms;
+                    user-select: none;
+                    overflow: hidden;
+                    vertical-align: middle;
+                    color: rgba(0,0,0,.5);
+
+                    .lineTop {
+                        stroke-dashoffset: -98px;
+                        stroke-dasharray: 40 139;
+                        fill: none;
+                        transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+                        stroke: #212529;
+                        stroke-width: 2.5;
+                        stroke-linecap: round;
+
+                    }
+
+                    .lineMiddle {
+                        fill: none;
+                        transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+                        stroke: #212529;
+                        stroke-width: 2.5;
+                        stroke-linecap: round;
+                    }
+
+                    .lineBottom {
+                        stroke-dashoffset: -138px;
+                        stroke-dasharray: 40 180;
+                        fill: none;
+                        transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+                        stroke: #212529;
+                        stroke-width: 2.5;
+                        stroke-linecap: round;
+                    }
+                }
+            }
+        }
+    }
+
+    .navBarLogo {
+        color: rgba(0, 0, 0, .9);
+        text-decoration: none;
+        letter-spacing: 3px;
+        font-family: 'Josefin Sans', sans-serif;
+        margin-right: auto !important;
+        display: inline-block;
+        padding-top: .3125rem;
+        padding-bottom: .3125rem;
+        font-size: 1.25rem;
+        line-height: inherit;
+        white-space: nowrap;
+    }
+
+    .navMenu {
+
+        .navBarNav {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            margin-left: auto !important;
+            padding-left: 0;
+            margin-bottom: 0;
+            list-style: none;
+
+
+            .link {
+                font-size: 12px;
+                font-weight: 700;
+                letter-spacing: 2px;
+                position: relative;
+                display: inline-block;
+                color: rgba(0, 0, 0, .7) !important;
+                text-transform: uppercase;
+                opacity: 0.8;
+                text-decoration: none;
+                padding: .5rem 1rem;
+                padding-left: 0;
+                font-family: 'Open Sans', sans-serif;
+            }
+
+            .linkOnFocus {
+                opacity: 1;
+                color: #fd735a !important;
+                font-size: 12px;
+                font-weight: 700;
+                letter-spacing: 2px;
+                position: relative;
+                display: inline-block;
+                text-transform: uppercase;
+                text-decoration: none;
+                padding: .5rem 1rem;
+                padding-left: 0;
+                font-family: 'Open Sans', sans-serif;
+
+                &::after {
+                    position: absolute;
+                    content: "";
+                    left: 0;
+                    right: 0;
+                    width: 100%;
+                    height: 0;
+                    background: #fbd0a1;
+                    bottom: 20px;
+                    z-index: -1;
+                    opacity: 0;
+                    visibility: hidden;
+                    transition: all 0.3s ease-in-out 0s;
+                }
+            }
+
         }
 
-      }
-
-      @media screen and (min-width: 992px) {
-        max-width: 960px;
-        flex-wrap: nowrap;
-        //display: flex;
-        //justify-content: center;
-        //align-items: center;
-      }
+        @media screen and (min-width: 992px) {
+            max-width: 960px;
+            flex-wrap: nowrap;
+            //display: flex;
+            //justify-content: center;
+            //align-items: center;
+        }
     }
 
     &::before {
-      background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
-      position: absolute;
-      left: 0;
-      right: 0;
-      height: 1px;
-      width: 100%;
-      content: "";
-      bottom: 0;
-      margin-bottom: 160px;
+        background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: 1px;
+        width: 100%;
+        content: "";
+        bottom: 0;
+        margin-bottom: 160px;
     }
 
     &::after {
-      background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
-      position: absolute;
-      left: 0;
-      right: 0;
-      height: 1px;
-      width: 100%;
-      content: "";
-      bottom: 0;
+        background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: 1px;
+        width: 100%;
+        content: "";
+        bottom: 0;
     }
-  }
 }
+
