--- a/src/Components/Header/HeaderMiniDetailed/NavMenuMiniDetailed.module.scss
+++ b/src/Components/Header/HeaderMiniDetailed/NavMenuMiniDetailed.module.scss
@@ -1,83 +1,31 @@
 .headerBlockNavMini {
-    position: fixed !important;
-    background-color: #fff;
-    z-index: 4;
-    left: 0;
-    right: 0;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: .5rem 1rem 0;
+  position: fixed !important;
+  background-color: #fff;
+  z-index: 4;
+  left: 0;
+  right: 0;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: .5rem 1rem 0;
 
 
-    .headerContainer {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        position: relative;
+  .headerContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: relative;
 
-        .navMenuMiniDtlRow {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 5px 0;
-            position: relative;
+    .navMenuMiniDtlRow {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 5px 0;
+      position: relative;
 
-            .navBarBtn {
-                outline: none;
-                padding: 0;
-                border: none;
-                font-size: 1.25rem;
-                line-height: 1;
-                background-color: transparent;
-                border-radius: .25rem;
-
-                .svgContainer {
-                    transform: rotate(45deg);
-                    cursor: pointer;
-                    -webkit-tap-highlight-color: transparent;
-                    transition: transform 400ms;
-                    user-select: none;
-                    overflow: hidden;
-                    vertical-align: middle;
-                    color: rgba(0,0,0,.5);
-
-                    .lineTop {
-                        stroke-dashoffset: -98px;
-                        stroke-dasharray: 40 139;
-                        fill: none;
-                        transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-                        stroke: #212529;
-                        stroke-width: 2.5;
-                        stroke-linecap: round;
-
-                    }
-
-                    .lineMiddle {
-                        fill: none;
-                        transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-                        stroke: #212529;
-                        stroke-width: 2.5;
-                        stroke-linecap: round;
-                    }
-
-                    .lineBottom {
-                        stroke-dashoffset: -138px;
-                        stroke-dasharray: 40 180;
-                        fill: none;
-                        transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-                        stroke: #212529;
-                        stroke-width: 2.5;
-                        stroke-linecap: round;
-                    }
-                }
-            }
-        }
-    }
-
-    .navBarLogo {
+      .navBarLogo {
         color: rgba(0, 0, 0, .9);
         text-decoration: none;
         letter-spacing: 3px;
@@ -89,98 +37,151 @@
         font-size: 1.25rem;
         line-height: inherit;
         white-space: nowrap;
-    }
+      }
 
-    .navMenu {
+      .navBarBtn {
+        outline: none;
+        padding: 0;
+        border: none;
+        font-size: 1.25rem;
+        line-height: 1;
+        background-color: transparent;
+        border-radius: .25rem;
 
-        .navBarNav {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: flex-start;
-            margin-left: auto !important;
-            padding-left: 0;
-            margin-bottom: 0;
-            list-style: none;
+        .svgContainer {
+          transform: rotate(45deg);
+          cursor: pointer;
+          -webkit-tap-highlight-color: transparent;
+          transition: transform 400ms;
+          user-select: none;
+          overflow: hidden;
+          vertical-align: middle;
+          color: rgba(0, 0, 0, .5);
 
+          .lineTop {
+            stroke-dashoffset: -98px;
+            stroke-dasharray: 40 139;
+            fill: none;
+            transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+            stroke: #212529;
+            stroke-width: 2.5;
+            stroke-linecap: round;
 
-            .link {
-                font-size: 12px;
-                font-weight: 700;
-                letter-spacing: 2px;
-                position: relative;
-                display: inline-block;
-                color: rgba(0, 0, 0, .7) !important;
-                text-transform: uppercase;
-                opacity: 0.8;
-                text-decoration: none;
-                padding: .5rem 1rem;
-                padding-left: 0;
-                font-family: 'Open Sans', sans-serif;
-            }
+          }
 
-            .linkOnFocus {
-                opacity: 1;
-                color: #fd735a !important;
-                font-size: 12px;
-                font-weight: 700;
-                letter-spacing: 2px;
-                position: relative;
-                display: inline-block;
-                text-transform: uppercase;
-                text-decoration: none;
-                padding: .5rem 1rem;
-                padding-left: 0;
-                font-family: 'Open Sans', sans-serif;
+          .lineMiddle {
+            fill: none;
+            transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+            stroke: #212529;
+            stroke-width: 2.5;
+            stroke-linecap: round;
+          }
 
-                &::after {
-                    position: absolute;
-                    content: "";
-                    left: 0;
-                    right: 0;
-                    width: 100%;
-                    height: 0;
-                    background: #fbd0a1;
-                    bottom: 20px;
-                    z-index: -1;
-                    opacity: 0;
-                    visibility: hidden;
-                    transition: all 0.3s ease-in-out 0s;
-                }
-            }
-
+          .lineBottom {
+            stroke-dashoffset: -138px;
+            stroke-dasharray: 40 180;
+            fill: none;
+            transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+            stroke: #212529;
+            stroke-width: 2.5;
+            stroke-linecap: round;
+          }
         }
+      }
+    }
+  }
 
-        @media screen and (min-width: 992px) {
-            max-width: 960px;
-            flex-wrap: nowrap;
-            //display: flex;
-            //justify-content: center;
-            //align-items: center;
+
+  .navMenu {
+
+    .navBarNav {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      margin-left: auto !important;
+      padding-left: 0;
+      margin-bottom: 0;
+      list-style: none;
+
+
+      .link {
+        font-size: 12px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        position: relative;
+        display: inline-block;
+        color: rgba(0, 0, 0, .7) !important;
+        text-transform: uppercase;
+        opacity: 0.8;
+        text-decoration: none;
+        padding: .5rem 1rem;
+        padding-left: 0;
+        font-family: 'Open Sans', sans-serif;
+      }
+
+      .linkOnFocus {
+        opacity: 1;
+        color: #fd735a !important;
+        font-size: 12px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        position: relative;
+        display: inline-block;
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: .5rem 1rem;
+        padding-left: 0;
+        font-family: 'Open Sans', sans-serif;
+
+        &::after {
+          position: absolute;
+          content: "";
+          left: 0;
+          right: 0;
+          width: 100%;
+          height: 0;
+          background: #fbd0a1;
+          bottom: 20px;
+          z-index: -1;
+          opacity: 0;
+          visibility: hidden;
+          transition: all 0.3s ease-in-out 0s;
         }
+      }
+
     }
 
-    &::before {
-        background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
-        position: absolute;
-        left: 0;
-        right: 0;
-        height: 1px;
-        width: 100%;
-        content: "";
-        bottom: 0;
-        margin-bottom: 160px;
+    @media screen and (min-width: 992px) {
+      max-width: 960px;
+      flex-wrap: nowrap;
+      //display: flex;
+      //justify-content: center;
+      //align-items: center;
     }
+  }
 
-    &::after {
-        background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
-        position: absolute;
-        left: 0;
-        right: 0;
-        height: 1px;
-        width: 100%;
-        content: "";
-        bottom: 0;
-    }
+  &::before {
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 1px;
+    width: 100%;
+    content: "";
+    bottom: 0;
+    margin-bottom: 160px;
+  }
+
+  &::after {
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 1px;
+    width: 100%;
+    content: "";
+    bottom: 0;
+  }
 }
 
