--- a/src/Components/AboutMe/AboutMe.module.scss
+++ b/src/Components/AboutMe/AboutMe.module.scss
@@ -2,16 +2,28 @@
   opacity: 1;
   visibility: visible;
   transform: translateY(0px);
+  margin: 0 auto;
+  background: #fff;
+  margin-top: -200px;
+  z-index: 100;
+  position: relative;
+  width: 95%;
+  border-radius: 5px;
+  transition: 0.5s;
+  padding: 0 !important;
+  max-width: 800px;
+
+
 
   &::before {
     content: "";
     position: absolute;
     left: 0;
     right: 0;
-    width: 80%;
+    width: 90%;
     background: #fff;
     display: block;
-    height: 70%;
+    height: 50%;
     bottom: 0;
     box-shadow: 10px 10px 100px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
@@ -24,6 +36,19 @@
     border-radius: 5px;
     max-width: 100%;
 
+&::after{
+  content: "";
+  position: absolute;
+  right: -80px;
+  z-index: -354;
+  height: 200px;
+  width: 200px;
+  display: block;
+  background: url(../AboutMe/patternAboutMe.png);
+  background-size: 155px;
+  top: -80px;
+}
+
     .AboutMeRow {
       display: flex;
       flex-direction: row;
@@ -32,6 +57,7 @@
       flex-wrap: nowrap;
       margin-right: -15px;
       margin-left: -15px;
+      max-height: 300px;
 
       .AboutMeText {
         width: 100%;
@@ -67,13 +93,18 @@
           margin: 0 auto;
           width: 300px;
           object-fit: cover;
-          display: block;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-size: cover;
+          background-position: center;
+          position: relative;
           border-radius: 50%;
           background-color: #fff;
-          border: 1px solid #dee2e6;
-          padding: .25rem;
+          //border: 1px solid #dee2e6;
+          //padding: .25rem;
           max-width: 100%;
-
+          vertical-align: middle;
         }
 
         @media screen and (min-width: 768px) {
@@ -81,6 +112,7 @@
         }
 
       }
+
       @media screen and (max-width: 1000px) {
         flex-wrap: wrap;
       }
