--- a/src/Components/ContactsForm/ContactsForm.module.scss
+++ b/src/Components/ContactsForm/ContactsForm.module.scss
@@ -34,6 +34,7 @@
         text-align: left;
         padding-right: 15px;
         padding-left: 15px;
+
         @media screen and (max-width: 687px) {
           display: flex;
           flex-direction: column;
@@ -62,6 +63,15 @@
           overflow: hidden;
           border: 1px solid #eee;
           transition: all 0.3s ease-in-out 0s;
+
+          &:focus {
+            color: #495057;
+            border-color: #80bdff;
+            outline: 0;
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+            transition: all 0.3s ease-in-out 0s;
+          }
+
           @media screen and (max-width: 687px) {
             display: flex;
             box-sizing: border-box;
@@ -99,6 +109,15 @@
           border: 1px solid #eee;
           transition: all 0.3s ease-in-out 0s;
           font-size: 1rem;
+
+          &:focus {
+            color: #495057;
+            border-color: #80bdff;
+            outline: 0;
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+            transition: all 0.3s ease-in-out 0s;
+          }
+
           @media screen and (max-width: 687px) {
           }
         }
@@ -109,9 +128,10 @@
         animation-duration: 1.5s;
         animation-delay: 0.5s;
         animation-name: fadeInUp;
-        text-align: center!important;
-        margin-top: 1.5rem!important;
+        text-align: center !important;
+        margin-top: 1.5rem !important;
         position: relative;
+
         .submitBtn {
           cursor: pointer;
           padding: 12px 50px;
@@ -123,7 +143,7 @@
           text-transform: uppercase;
           outline: none !important;
           background-color: #fd735a;
-          box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.2);
+          box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.2);
           border-radius: 2px;
           min-width: 140px;
           display: inline-block;
@@ -132,7 +152,8 @@
           user-select: none;
           border: 1px solid transparent;
           line-height: 1.5;
-          &:hover{
+
+          &:hover {
             transform: translateY(-5px);
             box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
           }
