--- a/src/Components/Projects/ItemProjects/ItemProjects.module.scss
+++ b/src/Components/Projects/ItemProjects/ItemProjects.module.scss
@@ -8,6 +8,7 @@
   text-transform: capitalize;
   margin: 0.5rem;
 
+
   .itemProjectsImage {
     height: 300px;
     background-color: rgba(0, 0, 0, 0.23);
@@ -42,6 +43,13 @@
       line-height: 1.2;
       position: relative;
       z-index: 1;
+      box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.2);
+      transition: all 0.3s ease-in-out 0s;
+      &:hover{
+        transform: translateY(-5px);
+        transition: all 0.5s;
+        box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
+      }
     }
 
   }
