--- a/src/Components/Skills/ItemSkill/ItemSkills.module.scss
+++ b/src/Components/Skills/ItemSkill/ItemSkills.module.scss
@@ -10,6 +10,12 @@
   background-position: 50% 553px;
   margin: 0.5rem;
   padding: 1.5rem !important;
+  transition: all 0.3s ease-in-out 0s;
+  &:hover{
+    transition: all 0.5s;
+    transform: translateY(-5px);
+    box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
+  }
 
 
   .itemSkillsImage {
