--- a/src/Components/Slogan/Slogan.module.scss
+++ b/src/Components/Slogan/Slogan.module.scss
@@ -72,12 +72,17 @@
         vertical-align: middle;
         line-height: 1.5;
         margin-top: 30px;
+        &:hover {
+          transition: all 0.5s;
+          transform: translateY(-5px);
+          box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
+
+        }
+        }
       }
     }
   }
 
-
-}
 
 
 
