--- a/src/Components/SocialNetwork/ItemContact/ItemContact.module.scss
+++ b/src/Components/SocialNetwork/ItemContact/ItemContact.module.scss
@@ -8,48 +8,56 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  cursor: pointer;
   background-position: 50% 553px;
   margin: 0.5rem;
   padding: 1.5rem !important;
   flex-wrap: wrap;
+  transition: all 0.3s ease-in-out 0s;
+
+  &:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
+    transition: all 0.3s ease-in-out 0s;
+  }
 
   .contactDetail {
     margin-top: .5rem !important;
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
 
-    .contactIcon {
-      height: 30px;
-      width: 30px;
-      background-color: rgba(0, 0, 0, 0.23);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-size: cover;
-      background-position: center;
-      position: relative;
-      border-radius: 5px;
-    }
 
     a {
       font-size: 18px;
       font-weight: 500;
       color: #6e7373;
-      text-decoration: underline;
       font-family: 'Open Sans', sans-serif;
       cursor: pointer;
-    }
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
-    p {
-      font-family: 'Josefin Sans', sans-serif;
-      font-size: 14px;
-      color: #333;
-      font-weight: 700 !important;
-      margin-top: .5rem !important;
-      margin: 0;
+      .contactIcon {
+        height: 30px;
+        width: 30px;
+        background-color: rgba(0, 0, 0, 0.23);
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        border-radius: 5px;
+      }
 
+      p {
+        font-family: 'Josefin Sans', sans-serif;
+        font-size: 14px;
+        color: #333;
+        font-weight: 700 !important;
+        margin-top: .5rem !important;
+        margin: 0;
+      }
     }
   }
 
